--- a/web/index.html
+++ b/web/index.html
@@ -73,7 +73,7 @@
         <script>
             (function () {
                 //var url = "http://dash.edgesuite.net/envivio/Envivio-dash2/manifest.mpd";
-                var url = "http://localhost:8080/Dash/vid/verdunDashed_dash.mpd";
+                var url = "/vid/out.mpd";
                 var player = dashjs.MediaPlayer().create();
                 player.initialize(document.querySelector("#videoPlayer"), url, true);
             })();
