--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
         </style>
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="dash.js-2.0.0/dist/dash.all.min.js"></script>
+
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
         <script src="js/jquery.js" ></script>
     </head>
@@ -69,13 +69,29 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/dash.js-2.0.0/dist/dash.all.min.js"></script>
+        <script src="./dash.js-2.0.0/dist/dash.all.min.js"></script>
         <script>
             (function () {
                 //var url = "http://dash.edgesuite.net/envivio/Envivio-dash2/manifest.mpd";
-                var url = "/vid/out.mpd";
+                var url = "./vid/out.mpd";
                 var player = dashjs.MediaPlayer().create();
                 player.initialize(document.querySelector("#videoPlayer"), url, true);
+                
+                $("#videoPlayer").on("play", function (ev) {
+                    $.ajax({
+                        method: "POST",
+                        url: "./loging",
+                        data: {event: "Play"}
+                    });
+                });
+                $("#videoPlayer").on("pause", function (ev) {
+                    $.ajax({
+                        method: "POST",
+                        url: "./loging",
+                        data: {event: "Pause"}
+                    });
+                });
+                
             })();
         </script>
     </body>
